lex_and_syntax.py
import ply.lex as lex
import pprint as pprint
from PyQt4 import QtCore, QtGui
import time
import threading

class OurLexer(object):
    # List of token names.     This is always required
    global reserved
    reserved = {
        'void': 'VOID',
        'class': 'CLASS',
        'program': 'PROGRAM',
        'end': 'END',
        'if': 'IF',
        'else': 'ELSE',
        'while': 'WHILE',
        'iterate': 'ITERATE',
        'return': 'RETURN',
        '||': 'OR',
        '&&': 'AND',
        '!': 'NOT',
        'turnoff': 'TURNOFF',
        'turnleft': 'TURNLEFT',
        'move': 'MOVE',
        'pickbeeper': 'PICKBEEPER',
        'putbeeper': 'PUTBEEPER',
        'front-is-clear': 'FRONTISCLEAR',
        'left-is-clear': 'LEFTISCLEAR',
        'right-is-clear': 'RIGHTISCLEAR',
        'front-is-blocked': 'FRONTISBLOCKED',
        'left-is-blocked': 'LEFTISBLOCKED',
        'right-is-blocked': 'RGHTISBLOCKED',
        'next-to-a-beeper': 'NEXTTOABEEPER',
        'not-next-to-a-beeper': 'NOTNEXTTOABEEPER',
        'facing-north': 'FACINGNORTH',
        'facing-south': 'FACINGSOUTH',
        'facing-east': 'FACINGEAST',
        'facing-west': 'FACINGWEST',
        'not-facing-north': 'NOTFACINGNORTH',
        'not-facing-south': 'NOTFACINGSOUTH',
        'not-facing-east': 'NOTFACINGEAST',
        'not-facing-west': 'NOTFACINGWEST',
        'any-beepers-in-beeper-bag': 'ANYBEEPERSINBEEPERBAG',
        'no-beepers-in-beeper-bag': 'NOBEEPERSBAG'
    }

    tokens = [
        'LBRACKET',
        'RBRACKET',
        'LPAREN',
        'RPAREN',
        'IDENTIFIER',
        'NUMBER'
    ] + list(reserved.values())

    # Regular expression rules for simple tokens

    t_LBRACKET = r'{'
    t_RBRACKET = r'}'
    t_LPAREN = r'\('
    t_RPAREN = r'\)'

    def t_newline(self, t):
        r'\n+'
        t.lexer.lineno += len(t.value)

    def t_ID(self, token):
        r'[a-zA-Z_][-a-zA-Z_0-9]*'
        global reserved
        # Check for reserved words
        token.type = reserved.get(token.value, 'IDENTIFIER')

        return token

    def t_NUMBER(self, t):
        r'\d+'
        t.value = int(t.value)
        return t

    # ignore tabs and spaces
    t_ignore = ' \t'

    def t_error(self, t):
        print("Illegal character '%s'" % t.value[0])
        t.lexer.skip(1)

    # Build the lexer
    def build(self, **kwargs):
        self.lexer = lex.lex(module=self, **kwargs)

    # Test it output
    def test(self, data):
        self.lexer.input(data)
        while True:
            tok = self.lexer.token()
            if not tok:
                break
        print(tok.type, tok.value)

    def get_tokens(self, data):
        self.lexer.input(data)
        token_values = []
        while True:
            token = self.lexer.token()
            if not token:
                break
            token_values.append(token.value)
        return token_values

    def get_tokens_types(self, data):
        self.lexer.input(data)
        token_types = []
        while True:
            token = self.lexer.token()
            if not token:
                break
            token_types.append(token.type)
        return token_types

# Declaracion e inicializacion de CODIGO INTERMEDIO
    global stack_positions
    stack_positions = []

    global stack_positions_else
    stack_positions_else = []

    global ci_list
    ci_list = []
    for i in range(10000):
        ci_list.append(0)

    # Counter para CODIGO INTERMEDIO
    global ci_count
    global symbol_count


    ci_count = 0

    # Constantes (numeros) para funciones [deben ir en TABLA DE SIMBOLOS, no?]

    global symbol_table
    symbol_table = {
      # if iterate
      'if': 510,
      'while': 550,
      'iterate': 520,
      'JMP': 530,
      'RET': 540,
      'CALL': 600,

      #official functions
      'move': 9001,
      'turnleft': 9002,
      'putbeeper': 9003,
      'pickbeeper': 9004,
      'end': 9005,
      #conditionals
      'front-is-clear': 8001,
      'left-is-clear': 8002,
      'right-is-clear': 8003,
      'front-is-blocked': 8004,
      'left-is-blocked': 8005,
      'right-is-blocked': 8006,
      'next-to-a-beeper': 8007,
      'not-next-to-a-beeper': 8008,
      'facing-north': 8009,
      'facing-south': 8010,
      'facing-east': 8011,
      'facing-west': 8012,
      'not-facing-north': 8013,
      'not-facing-south': 8014,
      'not-facing-east': 8015,
      'not-facing-west': 8016,
      'any-beepers-in-beeper-bag': 8017,
      'no-beepers-in-beeper-bag': 8018,

    }

global t_symbols
t_symbols = {}

# karel_program = open('karel.txt').read()
# lexer = OurLexer()
# lexer.build()


# #lexer.test(karel_program)


# all_tokens = lexer.get_tokens(karel_program)
# all_tokens.reverse()
# print (all_tokens)

# all_tokens2 = all_tokens
global karel_map_matrix
global karel_dict
karel_dict = {'beepers':'0', 'position_i':0,'position_j':0,'direction':''}


def verificar(expected_token):
    global all_tokens
    next_token = all_tokens[-1]
    #print ('VERIFICAR TIENE A {} EN LA MIRA'.format(next_token))
    return expected_token == next_token


global counter
counter = 0


def verificar_identifier():
    global all_tokens
    next_token = all_tokens[-1]
    #print ('VERIFICANDO IDENTIFIER::::::', next_token)
    return len(next_token) > 2 and len(next_token) < 11


def exigir_identifier():
    global all_tokens
    next_token = all_tokens[-1]
    if (verificar_identifier()):
        next_token = all_tokens.pop()
        #print('popeeeoooooo el identifier: {}'.format(next_token))
        # global counter
        # counter = counter + 1
        # print (counter, all_tokens)
        # print ('')
    else:
        raise Exception('function has to have length between 2 and 11')


def exigir_numero():
    global all_tokens
    next_token = all_tokens[-1]
    if (verificar_numero()):
        next_token = all_tokens.pop()
        #print('popeeeoooooo el NUMERO: {}'.format(next_token))


def verificar_numero():
    global all_tokens
    next_token = all_tokens[-1]
    #print ('VERIFICANDO NUMEROOOOO::::::', next_token)
    return int(next_token) >= 1 and int(next_token) <= 100


def exigir(expected_token):
    global all_tokens
    #print (all_tokens, 'antes del pop')

    next_token = all_tokens.pop()
    global counter
    counter = counter + 1
    #print (counter, all_tokens)
    #print ('')
    return expected_token == next_token

def add_one_to_ci():
    global ci_count
    ci_count += 1

def add_num_in_ci(number):
    global ci_count
    ci_list[ci_count] = number
    add_one_to_ci()


def add_code_in_ci(word_to_find):
    global ci_count
    print('Setting {} in Codigo Intermedio'.format(word_to_find))
    if(word_to_find in symbol_table):
        ci_list[ci_count] = symbol_table[word_to_find]
        print('{} is the code to insert in ci_list[{}]'.format(ci_list[ci_count], ci_count))
        print('adding' , word_to_find, ci_count)
        print_ci()
    add_one_to_ci()

def print_ci():
    print('#################')
    for x in range(0, 20):
      print(x,ci_list[x])
    print('#################')

''' ESTO YA NO VALE MAS QUE PA PURA VERGA'''
def add_symbol_to_table(symbol):
  global symbol_table
  global symbol_count
  symbol_count += 1
  symbol_table.update({symbol: symbol_count})
  print(symbol_table)
  print('AGREGUE UNA FUNCION, BIEN VERGA')


#------------------------------------------------------------------------------------------------


def mostrarError(expected_token):
    raise Exception('Syntax Error: Expected {}.'.format(expected_token))


#------PENDIENTE_CI------
#<program> ::= "class" "program" "{" <functions> <main function> "}"
def program():
    global ci_count
    if (exigir("class")):
        add_code_in_ci("JMP")
        print ("STACK ANTES", stack_positions)
        stack_positions.append(ci_count)
        print ("STACK DESPUES",stack_positions)
        if (exigir("program")):
            if (exigir("{")):
                add_one_to_ci()
                functions()
                main_function()
                if (not exigir("}")):
                    mostrarError("}")
            else:
                mostrarError("{")
        else:
            mostrarError("program")
    else:
        mostrarError("class")


#------PENDIENTE_CI------
#<functions> ::= <function> <functions prima> | lambda
def functions():
    if (verificar("void")):
        function()
        functions_prima()


#------PENDIENTE_CI------
#<functions prima> ::= <function> <functions prima> | lambda
def functions_prima():
    if (verificar("void")):
        function()
        functions_prima()


#------PENDIENTE_CI------
def main_function():
    if (exigir("program")):
        if (exigir("(")):
            if (exigir(")")):
                if (exigir("{")):
                    print ("STACK ANTES", stack_positions)
                    actual_position = stack_positions.pop()
                    print ("STACK DESPUES", stack_positions)
                    print(actual_position, 'poooooooop')
                    ci_list[actual_position] = ci_count
                    body()
                    if (not exigir("}")):
                        mostrarError("}")
                else:
                    mostrarError("{")
            else:
                mostrarError(")")
        else:
            mostrarError("(")
    else:
        mostrarError("program")


#------PENDIENTE_CI------
#<function> ::= "void" <name function> "("    ")" "{" <body> "}"
def function():
    print ('CUSTOMEEEEEERRRRRRRRRRR!!!!!!!!!!!')
    if (exigir("void")):
        customer_function() #HERE
        if (exigir("(")):
            if (exigir(")")):
                print ('EXIJO BRACKETS EN FUNCTION')
                if (exigir("{")):
                    body()
                    if (not exigir("}")):
                        mostrarError("}")
                    add_code_in_ci("RET")
                else:
                    mostrarError("{")
            else:
                mostrarError(")")
        else:
            mostrarError("(")
    else:
        mostrarError("void")


#------PENDIENTE_CI------
#<body> ::= <expression> <body prima>
def body():
    print ('expresssion llamada en body normalito')
    expression()
    body_prima()


#------PENDIENTE_CI------
#<body prima> ::= <expression> <body prima> | lambda
def body_prima():
    #print ('entra a body prima ')

    if (verificar("if") or verificar("while") or verificar("iterate") or verificar('move') or verificar("turnleft") or verificar("pickbeeper") or verificar("putbeeper") or verificar("end") or verificar_identifier()):
        expression()
        body_prima()
    # else lambda


#------PENDIENTE_CI------
#<expression> ::= <call function> | <if expression> | <while expression> | <iterate expression>
def expression():
    if (verificar("if")):
        if_expression()
    elif (verificar("while")):
        while_expression()
    elif (verificar("iterate")):
        iterate_expression()
    else:
        call_function()



#------PENDIENTE_CI------
# verificar que no es palabra reservada
# <call function> ::= <name function> "(" ")"
def call_function():
    name_function()
    #print ('exigiendo parentesis en call function')
    if (exigir("(")):
        if (not exigir(")")):
            mostrarError(")")
    else:
        mostrarError("(")
    #print ('CALL FUNCTION, SE CHINGO PARENTESIS')


#------PENDIENTE_CI------
#<name function> ::= <official function> | <customer function>
def name_function():
    if (verificar('move') or verificar("turnleft") or verificar("pickbeeper") or verificar("putbeeper") or verificar("end") or verificar("program")):
        #print ('obviamente entre a official fucntion')
        next_token = all_tokens[-1]
        add_code_in_ci(next_token)

        official_function()
    else:
        call_customer_function()

#------PENDIENTE_ARREGLAR------
#------PENDIENTE_ARREGLAR------
#------PENDIENTE_ARREGLAR------
#------PENDIENTE_ARREGLAR------
#------PENDIENTE_ARREGLAR------
def customer_function():
    global t_symbols
    next_token = all_tokens[-1]
    if(exigir(next_token)):
        t_symbols[next_token] = ci_count
        print ("Tabla de simbolos:", t_symbols)

def call_customer_function():
    global t_symbols
    next_token = all_tokens[-1]
    if(exigir(next_token)):
        if (next_token in t_symbols):
            print(t_symbols)
            print(next_token)
            print(t_symbols[next_token])
            add_code_in_ci("CALL")
            add_num_in_ci(t_symbols[next_token])
            stack_positions.append(ci_count)
            print ("stack", stack_positions)


#------PENDIENTE_CI------
#<if expression> ::= "if" "(" <condition> ")" "{" <body>    "}" <else>


def if_expression():
    global ci_count
    if (exigir("if")):
        add_code_in_ci("if")
        if (exigir("(")):
            condition()
            add_code_in_ci("JMP")
            print("STACK ANTES", stack_positions)
            stack_positions.append(ci_count)
            stack_positions_else.append(ci_count)
            print("STACK DESPUES", stack_positions)
            add_one_to_ci()
            if (exigir(")")):
                if (exigir("{")):
                    body()

                    if (exigir("}")):
                        else_expression()
                    else:
                        mostrarError("}")
                    print("STACK ANTES", stack_positions)
                    actual_position = stack_positions.pop()
                    print("STACK ANTES", stack_positions)
                    #ci_list[actual_position] = ci_count
                else:
                    mostrarError("{")
            else:
                mostrarError(")")
        else:
            mostrarError("(")
    else:
        mostrarError("if")


#------PENDIENTE_CI------
#<else> ::= "else" "{" <body> "}"    | lambda
def else_expression():
    if (verificar("else")):
        if (exigir("else")):
            add_code_in_ci("JMP")
            print ("STACK ELSE ANTES", stack_positions_else)
            actual_position = stack_positions_else.pop()
            print(actual_position, 'poooooooop del ELSE')
            print("VAL act", ci_list[actual_position])
            print("Pos a poner", ci_count)
            ci_list[actual_position] = ci_count + 1

            print ("STACK ANTES", stack_positions)
            stack_positions.append(ci_count)
            print ("STACK DESPUES", stack_positions)
            add_one_to_ci()
            if (exigir("{")):
                body()
                if (not exigir("}")):
                    mostrarError("}")
                print ("STACK ANTES ELSE", stack_positions)
                actual_position = stack_positions.pop()
                print ("STACK DESPUES ELSE", stack_positions)
                print(actual_position, 'poooooooop')
                print("VAL act", ci_list[actual_position])
                print("Pos a poner", ci_count)
                ci_list[actual_position] = ci_count
                print("THIS", ci_count)
                print_ci()
            else:
                mostrarError("{")
        else:
            mostrarError("else")
    # else Lambda


#------PENDIENTE_CI------
#<while> ::= "while" "(" <condition> ")" "{" <body> "}"
def while_expression():
    global ci_count
    if (exigir("while")):
        stack_positions.append(ci_count)
        add_code_in_ci("while")
        if (exigir("(")):
            condition()
            add_code_in_ci("JMP")
            stack_positions.append(ci_count)
            add_one_to_ci()
            if (exigir(")")):
                if (exigir("{")):
                    body()
                    if (not exigir("}")):
                        mostrarError("}")
                    actual_position = stack_positions.pop()
                    print(actual_position, 'poooooooop')
                    ci_list[actual_position] = ci_count + 2
                    add_code_in_ci("JMP")
                    print(actual_position, 'poooooooop22222')
                    ci_list[ci_count] = stack_positions.pop()
                    add_one_to_ci()
                    print_ci()
                else:
                    mostrarError("{")
            else:
                mostrarError(")")
        else:
            mostrarError("(")
    else:
        mostrarError("while")


def iterate_expression():
    global ci_count
    global all_tokens
    if (exigir("iterate")):
        stack_positions.append(ci_count)
        add_code_in_ci("iterate")
        if (exigir("(")):
            print(all_tokens[-1],'IMPRIMIR EL NUMERO 3')
            add_num_in_ci(all_tokens[-1])
            number()
            add_code_in_ci("JMP")
            stack_positions.append(ci_count)
            add_one_to_ci()
            if (exigir(")")):
                if (exigir("{")):
                    body()
                    if (not exigir("}")):
                        mostrarError("}")
                    actual_position = stack_positions.pop()
                    #print(actual_position, 'poooooooop')
                    ci_list[actual_position] = ci_count + 2
                    add_code_in_ci("JMP")
                    #print(actual_position, 'poooooooop')
                    ci_list[ci_count] = stack_positions.pop()
                    add_one_to_ci()
                    print_ci()
                else:
                    mostrarError("{")
            else:
                mostrarError(")")
        else:
            mostrarError("(")
    else:
        mostrarError("iterate")

#------PENDIENTE_CI------
#<condition> ::=
    # "front-is-clear" |
    # "left-is-clear" |
    # "right-is-clear" |
    # "front-is-blocked" |
    # "left-is-blocked" |
    # "right-is-blocked" |
    # "next-to-a-beeper" |
    # "not-next to a beeper" |
    # "facing-north" |
    # "facing-south" |
    # "facing-east" |
    # "facing-west" |
    # "not-facing-north" |
    # "not-facing-south" |
    # "not-facing-east" |
    # "not-facing-west" |
    # "any-beepers-in-beeper-bag" |
    # "no-beepers-in-beeper-bag"
def condition():
    global all_tokens
    next_token = all_tokens[-1]

    if (verificar("front-is-clear")):
        exigir("front-is-clear")

    elif (verificar("left-is-clear")):
        exigir("left-is-clear")

    elif (verificar("right-is-clear")):
        exigir("right-is-clear")

    elif (verificar("front-is-blocked")):
        exigir("front-is-blocked")

    elif (verificar("left-is-blocked")):
        exigir("left-is-blocked")

    elif (verificar("right-is-blocked")):
        exigir("right-is-blocked")

    elif (verificar("next-to-a-beeper")):
        exigir("next-to-a-beeper")

    elif (verificar("not-next-to-a-beeper")):
        exigir("not-next-to-a-beeper")

    elif (verificar("facing-north")):
        exigir("facing-north")

    elif (verificar("facing-south")):
        exigir("facing-south")

    elif (verificar("facing-east")):
        exigir("facing-east")

    elif (verificar("facing-west")):
        exigir("facing-west")

    elif (verificar("not-facing-north")):
        exigir("not-facing-north")

    elif (verificar("not-facing-south")):
        exigir("not-facing-south")

    elif (verificar("not-facing-east")):
        exigir("not-facing-east")

    elif (verificar("not-facing-west")):
        exigir("not-facing-west")

    elif (verificar("any-beepers-in-beeper-bag")):
        exigir("any-beepers-in-beeper-bag")

    elif (verificar("no-beepers-in-beeper-bag")):
        exigir("no-beepers-in-beeper-bag")
    else:
        mostrarError("a defined condition")
    add_code_in_ci(next_token)

#------PENDIENTE_CI------
#<official function> ::= "move" | "turnleft" | "pickbeeper" | "putbeeper" | "end"
def official_function():
    #print ('official FUNCTIOOOOOOOOOOON')
    if (verificar("move")):
        #print('POP DE MOVEEEEEEEEEEEEEEEEEEEEEE')
        exigir("move")
    elif (verificar("turnleft")):
        exigir("turnleft")
    elif (verificar("pickbeeper")):
        exigir("pickbeeper")
    elif (verificar("putbeeper")):
        exigir("putbeeper")
    elif (verificar("end")):
        exigir("end")
    else:
        mostrarError("a defined function")

def number():
    exigir_numero()


def check_lex_and_syntax(karel_program):
    #karel_program = open('karel.txt').read()
    lexer = OurLexer()
    lexer.build()

    # lexer.test(karel_program)
    global all_tokens
    all_tokens = lexer.get_tokens(karel_program)
    #token_types = lexer.get_tokens_types(karel_program)

    # token_types.reverse()
    all_tokens.reverse()
    #print (all_tokens)

    # Pa debuggear
    #print (all_tokens)
    #print (token_types)
    program()

global stack_customer_functions
stack_customer_functions = []

def read_board_file():
    #print("QUE PEDOOOOOOOOOOOOO")
    global karel_map_matrix
    print("reading from file, reload")
    karel_map_matrix = [[0 for x in range(10)] for y in range(10)]
    karel_tokens = open("mapa.karel").read().split()
    karel_tokens.reverse()

    for i, lista in enumerate(karel_map_matrix):
        for j, element in enumerate(lista):
            karel_map_matrix[i][j] = karel_tokens.pop()

    # Use pretty print to print the matrix in console
    #pprint.pprint((karel_map_matrix))
    draw_board()

def get_karel_direction():
    return karel_dict['direction']

def get_karel_position():
    return karel_dict['position_i'], karel_dict['position_j']

def set_karel_position(i, j):
    karel_dict['position_i'] = i
    karel_dict['position_j'] = j

def set_square(square, image_name):
    global karel_map_matrix

    if(image_name == 'blank'):
        blank_square = QtGui.QPixmap('images/blank.png')
        square.setPixmap(blank_square)

    elif(image_name == 'north'):
        karelN = QtGui.QPixmap('images/karelN.png')
        square.setPixmap(karelN)

    elif(image_name == 'east'):
        karelE = QtGui.QPixmap('images/karelE.png')
        square.setPixmap(karelE)

    elif(image_name == 'south'):
        karelS = QtGui.QPixmap('images/karelS.png')
        square.setPixmap(karelS)

    elif(image_name == 'west'):
        karelW = QtGui.QPixmap('images/karelW.png')
        square.setPixmap(karelW)

    elif(image_name == 'northB'):
        karelN = QtGui.QPixmap('images/karelNB.png')
        square.setPixmap(karelN)

    elif(image_name == 'eastB'):
        karelE = QtGui.QPixmap('images/karelEB.png')
        square.setPixmap(karelE)

    elif(image_name == 'southB'):
        karelS = QtGui.QPixmap('images/karelSB.png')
        square.setPixmap(karelS)

    elif(image_name == 'westB'):
        karelW = QtGui.QPixmap('images/karelWB.png')
        square.setPixmap(karelW)

    elif(image_name == 'wall'):
        wall = QtGui.QPixmap('images/wall.png')
        square.setPixmap(wall)

    elif(image_name == 'beeper'):
        beeper = QtGui.QPixmap('images/beeper.png')
        square.setPixmap(beeper)


        # #TODO, set a number in the image, to know how many beepers are there
        # i, j = get_karel_position()
        # if (karel_map_matrix[i][j] == '-'):
        #     karel_map_matrix[i][j] = '1'
        # elif(karel_map_matrix[i][j].isdigit()):
        #     karel_map_matrix[i][j] = str(int(karel_map_matrix[i][j]) + 1)


def draw_board():
    global karel_map_matrix
    global all_squares
    global karel_dict

    try:
        for i, array in enumerate(all_squares):
            for j, square in enumerate(array):
                if(karel_map_matrix[i][j] == '-'):
                    set_square(square, 'blank')
                elif(karel_map_matrix[i][j] == 'B'):
                    set_square(square, 'wall')
                elif(karel_map_matrix[i][j].isdigit()):
                    set_square(square, 'beeper')
                elif(karel_map_matrix[i][j] == 'N'):
                    karel_dict["position_i"] = i
                    karel_dict["position_j"] = j
                    karel_dict["direction"] = 'north'
                    set_square(square, 'north')
                    karel_map_matrix[i][j] = '-'
                elif(karel_map_matrix[i][j] == 'S'):
                    karel_dict["position_i"] = i
                    karel_dict["position_j"] = j
                    karel_dict["direction"] = 'south'
                    set_square(square, 'south')
                    karel_map_matrix[i][j] = '-'
                elif(karel_map_matrix[i][j] == 'E'):
                    karel_dict["position_i"] = i
                    karel_dict["position_j"] = j
                    karel_dict["direction"] = 'east'
                    set_square(square, 'east')
                    karel_map_matrix[i][j] = '-'
                elif(karel_map_matrix[i][j] == 'W'):
                    karel_dict["position_i"] = i
                    karel_dict["position_j"] = j
                    karel_dict["direction"] = 'west'
                    set_square(square, 'west')
                    karel_map_matrix[i][j] = '-'
                else:
                    raise Exception('Invalid symbol in Karel File, unable to load')
    except (Exception) as e:
        print (e)
        stop_execution(str(e))
    time.sleep(1)

    #checa el dic Karel
    #pinta Karel en la posicion que sacamos del dic


def move_board():
    global all_squares
    global karel_dict
    print('executing move')

    i, j = get_karel_position()


    try:
        if (karel_dict['direction'] == 'north'):
            if (i-1 < 0):
                raise Exception('Invalid move: Cannot play off the board')
            if (karel_map_matrix[i-1][j] == 'B'):
                raise Exception('Invalid move: Cannot move to a wall')
            if(karel_map_matrix[i-1][j].isdigit()):
                set_square(all_squares[i-1][j], 'northB')
            else:
                set_square(all_squares[i-1][j], 'north')
            set_karel_position(i-1, j)

        elif (karel_dict['direction'] == 'south'):
            if (i+1 > 9):
                raise Exception('Invalid move: Cannot play off the board')
            if (karel_map_matrix[i+1][j] == 'B'):
                raise Exception('Invalid move: Cannot move to a wall')
            if(karel_map_matrix[i+1][j].isdigit()):
                set_square(all_squares[i+1][j], 'southB')
            else:
                set_square(all_squares[i+1][j], 'south')
            set_karel_position(i+1, j)

        elif (karel_dict['direction'] == 'east'):
            if (j+1 > 9):
                raise Exception('Invalid move: Cannot play off the board')
            if (karel_map_matrix[i][j+1] == 'B'):
                raise Exception('Invalid move: Cannot move to a wall')
            if(karel_map_matrix[i][j+1].isdigit()):
                set_square(all_squares[i][j+1], 'eastB')
            else:
                set_square(all_squares[i][j+1], 'east')
            set_karel_position(i, j+1)

        elif (karel_dict['direction'] == 'west'):
            if (j-1 < 0):
                raise Exception('Invalid move: Cannot play off the board')
            if (karel_map_matrix[i][j-1] == 'B'):
                raise Exception('Invalid move: Cannot move to a wall')
            if(karel_map_matrix[i][j-1].isdigit()):
                set_square(all_squares[i][j-1], 'westB')
            else:
                set_square(all_squares[i][j-1], 'west')
            set_karel_position(i, j-1)

        #print(karel_map_matrix[i][j], 'lo que dejo atras')

        if (karel_map_matrix[i][j] == '-'):
            set_square(all_squares[i][j], 'blank')
        elif (karel_map_matrix[i][j].isdigit()):
            set_square(all_squares[i][j], 'beeper')

    except (Exception) as e:
        print (e)
        stop_execution(str(e))
    time.sleep(1)




def turn_left_board():
    global karel_dict
    global all_squares
    beepers = ''

    print('executing turnleft')
    i, j = get_karel_position()

    if (karel_map_matrix[i][j].isdigit()):
        beepers = 'B'
    if (karel_dict['direction'] == 'north'):
        karel_dict['direction'] = 'west'
        set_square(all_squares[i][j] ,'west' + beepers)
    elif (karel_dict['direction'] == 'west'):
        karel_dict['direction'] = 'south'
        set_square(all_squares[i][j] ,'south' + beepers)
    elif (karel_dict['direction'] == 'south'):
        karel_dict['direction'] = 'east'
        set_square(all_squares[i][j] ,'east' + beepers)
    elif (karel_dict['direction'] == 'east'):
        karel_dict['direction'] = 'north'
        set_square(all_squares[i][j] ,'north' + beepers)
    time.sleep(1)

def put_beeper_board():
    print('executing putbeeper')
    global all_squares
    global karel_map_matrix

    i, j = get_karel_position()

    try:
        print ("Beepers antes del put", karel_dict['beepers'])
        if (int(karel_dict['beepers']) >= 1):
            if(karel_map_matrix[i][j].isdigit()):
                new_beepers = int(karel_dict['beepers']) - 1
                karel_dict['beepers'] = str(new_beepers)
                pos_beepers = int(karel_map_matrix[i][j]) + 1
                karel_map_matrix[i][j] = str(pos_beepers)

                new_beepers = int(karel_dict['beepers']) - 1
                karel_dict['beepers'] = str(new_beepers)
            else:
                karel_map_matrix[i][j] = '1'

                new_beepers = int(karel_dict['beepers']) - 1
                karel_dict['beepers'] = str(new_beepers)
            #Dejar un beeper no matter what
            set_square(all_squares[i][j], karel_dict['direction'] +'B')  #El + 'B' para poner la imagen ROJA
        else:
            raise Exception('You don\'t have any beepers')
        print ("Beepers despues del put", karel_dict['beepers'])
    except Exception as e:
        print (e)
        stop_execution(str(e))
    time.sleep(1)

def pick_beeper_board():
    print ('executing pickbeeper')
    global all_squares
    global karel_map_matrix

    try:
        print ("Beepers antes del pick", karel_dict['beepers'])
        i, j = get_karel_position()
        if(karel_map_matrix[i][j].isdigit()):
            pos_beepers = int(karel_map_matrix[i][j]) - 1
            karel_map_matrix[i][j] = str(pos_beepers)

            new_beepers = int(karel_dict['beepers']) + 1
            karel_dict['beepers'] = str(new_beepers)

            if (karel_map_matrix[i][j] == '0'):
                karel_map_matrix[i][j] = '-'
                set_square(all_squares[i][j], karel_dict['direction'])
        else:
            raise Exception('There are no beepers in this block')
        print ("Beepers despues del pick", karel_dict['beepers'])
    except Exception as e:
        print (e)
        stop_execution(str(e))
    time.sleep(1)

#TODO, fix if with else. It's working without ELSE
def if_condition_board():
    print('Entering if condition')
    global ci_list
    global position
    #llamar al siguiente que es la condicional (y nos saltamos esa condicional)
    position += 1
    semantic_functions[ci_list[position]]()

global numIterations
numIterations = 0

def iterate_condition_board():
    # CI POSITION = ITERATE
    print('Entering iterate...')
    global ci_list
    global position
    global numIterations

    LAST_ITERATION_WITH_NO_EXECUTION = 1
    READY_FOR_NEW_ITERATION = 0


    print('iteracion numero: ' + str(numIterations))
    if (numIterations == READY_FOR_NEW_ITERATION):
        print('Ready for new iteration...')
        position += 1
        # CI POSITION = NUMITERATIONS
        numIterations = ci_list[position] + 1 # Offset
        print('numIterations: ' + str(numIterations))
        print('pos: ' + str(position+3) + '|||' + str(ci_list[position + 3]))
        position += 3
        numIterations -= 1
        semantic_functions[ci_list[position]]() # make a jump to the BODY for execution
            # CI POSITION = BODY
    elif (numIterations == LAST_ITERATION_WITH_NO_EXECUTION):
        print('Last iteration with no execution...')
        position += 2
        # CI POSITION = NUMITERATIONS
        numIterations = 0
        semantic_functions[ci_list[position]]() # make a jump to the JMP to exit ITERATE
            # CI POSITION = JMP
    else:
        print('Normal iteration - Going to BODY...')
        position += 4
        numIterations -= 1
        semantic_functions[ci_list[position]]() # make a jump to the BODY for execution
            # CI POSITION = BODY

def while_condition_board():
    print('Entering while...')
    global ci_list
    global position
    #llamar al siguiente que es la condicional (y nos saltamos esa condicional)
    position += 1
    semantic_functions[ci_list[position]]()

def JMP_board():

    global ci_list
    global position

    #print("Esta posicion", ci_list[position])
    #print("La de adelante", ci_list[position + 1])
    position = ci_list[position + 1] - 1 #El -1 es porque el while se brinca a la sig posicion
    #print("Esta nueva posicion", ci_list[position])
    #print("La nueva de adelante", ci_list[position + 1])
    print("JMP END")

def RET_board():
    global stack_customer_functions
    global position
    print("La posicion antes del RET", position)
    position = stack_customer_functions.pop() + 1
    print("La posicion despues del RET", position)
    print("RET END")

def CALL_board():
    global ci_list
    global position
    global stack_customer_functions
    #print("Lo que entra al stack", position)
    stack_customer_functions.append(position)
    #print("El stack", stack_customer_functions)
    #print("Esta posicion", ci_list[position])
    #print("La de adelante", ci_list[position + 1])
    position = ci_list[position + 1] - 1 #El -1 es porque el while se brinca a la sig posicion
    print("CALL END")


def front_is_clear_board():
    global position
    global karel_map_matrix

    print ('entered front is clear!')

    i, j = get_karel_position()
    direction = get_karel_direction()

    if(direction == 'north'):
        i -= 1
    elif(direction == 'south'):
        i += 1
    elif(direction == 'east'):
        j += 1
    elif(direction == 'west'):
        j -= 1

    #out_of_bounds = out_of_bounds_board()
    if (not karel_map_matrix[i][j] == 'B' and not is_out_of_bounds(i,j)):
        position += 2
        print('front IS clear and added 3 to position', position)
    else:
        print('front is NOT clear')

 #   print ("Limites", out_of_bounds)
 #   print ("Frente", front_is_clear)

def is_out_of_bounds(i,j):
    return i >= 10 or i <= -1 or j >= 10  or j <= -1

def left_is_clear_board():
    global position
    global karel_map_matrix

    print ('entered left is clear!')

    i, j = get_karel_position()
    direction = get_karel_direction()

    if(direction == 'north'):
        j -= 1
    elif(direction == 'south'):
        j += 1
    elif(direction == 'east'):
        i -= 1
    elif(direction == 'west'):
        i += 1

    #out_of_bounds = out_of_bounds_board()
    if (not karel_map_matrix[i][j] == 'B' and not is_out_of_bounds(i,j)):
        position += 2
        print('left IS clear and added 3 to position', position)
    else:
        print('left is NOT clear')


def right_is_clear_board():
    global position
    global karel_map_matrix

    print ('entered right is clear!')

    i, j = get_karel_position()
    direction = get_karel_direction()
